# ide-rs

./: CODEGEN_MARKERS_PROTOTYPE.md  Cargo.toml  DERIVE_MACRO_PROTOTYPE.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_VISUAL_UI_PROJECT_CODE_TERMINAL_RCL.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  RCL_IMPROVEMENTS.md  README.md  ROADMAP.md  SOURCE_CODE_EDITOR_UI_IMPROVEMENT_PLANS.md  compilation_errors.txt
.github/workflows/: ci.yml
examples/: demo_code.rs  demo_rust_code.rs  enhanced_lsp_demo.rs  modern_code_editor_demo.rs
src/: ai_agent.rs  ai_development_assistant.rs  ide_app.rs  lib.rs  main.rs
src/core/: event_bus.rs  logging.rs  mod.rs
src/editor/: actions.rs  advanced_alignment.rs  advanced_code_editor.rs  advanced_refactoring.rs  advanced_search.rs  ai_panel.rs  buffer_manager.rs  build_system.rs  canvas.rs  code_completion.rs  code_editor.rs  code_folding.rs  code_generator.rs  code_ir.rs  codegen_example.rs  codegen_markers.rs  collaborative_development.rs  component_registry.rs  custom_component.rs  debugger.rs  enhanced_code_gen.rs  enhanced_codegen.rs  enhanced_lsp_client.rs  enhanced_property_inspector.rs  enhanced_visual_designer.rs  file_manager.rs  file_operations.rs  file_watcher.rs  git_integration.rs  hierarchy_manager.rs  inspector.rs  intelligent_completion.rs  keyboard_shortcuts.rs  language_service.rs  live_feedback.rs  live_reload.rs  lsp_integration.rs  menu.rs  minimap.rs  mod.rs  (+27 more)
src/ide_app/: animated_ui.rs  app_state.rs  (+7 more)
tests/: test_clipboard.rs  test_code_editor.rs  test_dns_client.rs  test_drag_drop.rs  test_file_system.rs  test_floating_panel.rs  test_ftp_client.rs  test_http_client.rs  test_network_monitor.rs  test_power_manager.rs  test_process_manager.rs  test_project_manager.rs  test_property_inspector.rs  test_rust_analyzer.rs  test_tcp_client.rs  test_udp_client.rs  test_websocket.rs
(+152 files in other folders)
