[package]
name = "ide-rs"
version = "0.1.0"
edition = "2024"


[dependencies]
eframe = "0.27"
egui = "0.27"
ollama-rs = "0.2"
futures = "0.3"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.141"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt", "net"] }
