[package]
name = "ide-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
eframe = "0.27"
egui = "0.27"
ollama-rs = "0.2"
futures = "0.3"
anyhow = "1.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.141"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
whoami = "1.4"
syntect = "5.1"

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt", "net"] }
