[package]
name = "ide-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ide-rs"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi"] }


[dependencies]
eframe = "0.27"
egui = "0.27"
ollama-rs = "0.2"
futures = "0.3"
anyhow = "1.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.141"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
whoami = "1.4"
syntect = "5.1"
thiserror = "1.0"
rfd = "0.14"
ropey = "1.6"
uuid = { version = "1.0", features = ["v4", "serde"] }
notify = "6.1"
tokio = { version = "1.37", features = ["macros", "rt", "net", "sync", "time"] }
tokio-util = "0.7"

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt", "net"] }
